# pretix-mvola

./: .update-locales.sh  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_mvola/: apps.py  models.py  payment.py  signals.py  urls.py  views.py
pretix_mvola/locale/fr/LC_MESSAGES/: django.po
pretix_mvola/migrations/: 0001_initial.py  0002_mvolaorderpayment_server_corelation_id_and_more.py  0003_rename_server_corelation_id_mvolaorderpayment_server_correlation_id.py  0004_mvolaorderpayment_user_account_identifier.py
