[project]
name = "pretix-mvola"
dynamic = ["version"]
description = "Pay with mobile money supplier MVola (Madagascar)"
readme = "README.rst"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "Mika Andrianarijaona", email = "mikaoelitiana@gmail.com"},
]
maintainers = [
    {name = "Mika Andrianarijaona", email = "mikaoelitiana@gmail.com"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
pretix_mvola = "pretix_mvola:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/mikaoelitiana/pretix-mvola"
repository = "https://github.com/mikaoelitiana/pretix-mvola"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_mvola.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
